PLFM-8180: Remove lib-audit module (old DW code)